--- a/styles.css
+++ b/styles.css
@@ -744,14 +744,40 @@ footer {
 }
 /* Responsive styles for mobile devices */
 @media only screen and (max-width: 768px) {
+	
 	/*Mobile menu and hamburger icon*/
+
+
+	/*Add overlay effect to mobile menu*/
+	.overlay {
+		display:none;
+		background-color: rgba(0, 0, 0, 0.397);
+		width: 100%;
+		height:200vh;
+		right:-40px;
+		position:fixed;
+		z-index: 5;
+	}
+
+	.overlay-show {
+		display:block;
+	}
+
+	.close-icon__z-show {
+		z-index: 999;
+	}
+
 	.close-icon {
 		display: block;
 		font-size: 26px;
 		font-weight: 500;
 		color: #FFF;
+		background-color: #4B82AC;
+		border: 2px solid #FFF;
+		padding: 8px 15px;
+		border-radius: 100px;
 		margin-top: -35px;
-		margin-right: 20px;
+		margin-right: 10px;
 	}
 	.hidden {
 		display: none !important;
@@ -787,8 +813,8 @@ footer {
 		background-color: #FFF !important;
 		height: 102vh !important;
 		top: -35px;
-    z-index: 999;
-    animation-duration: 0.5s;
+    	z-index: 999;
+    	animation-duration: 0.5s;
 	}
 	.mobile-menu img {
 		height: 77px;
@@ -974,14 +1000,15 @@ footer {
     height:87vh !important;
   }
 	.slider-dots {
+		
 		display: flex;
 		flex-direction: row !important;
 		position: relative;
 		justify-content: center;
 		right: 0;
 		left: 0;
-    margin-top: -20px;
-    z-index: 5;
+    	margin-top: -20px;
+    	z-index: 4;
 	}
 	.slider-dot {
 		margin: 0 5px;
