--- a/styles.css
+++ b/styles.css
@@ -848,7 +848,6 @@ footer {
 		height: 77px;
 		margin-top: 40px;
 		margin-left: 15px;
-		width: 93px;
 	}
 	.show-menu {
 		display: block;
@@ -882,9 +881,9 @@ footer {
 	.language-menu {
 		display: flex;
 		margin-top: -40px;
-		margin-left: -170px;
+		margin-right: 100px;
 		margin-bottom: -50px;
-		scale: 0.3;
+		scale: 0.35;
 		flex-direction: row !important;
 		justify-content: end;
 	}
@@ -952,6 +951,13 @@ footer {
 		height: 40px;
 		padding-bottom: 30px;
 	}
+
+	.social-icons__mobile-menu a {
+		padding: 0;
+		margin: 0;
+		width:115px;
+	}
+
 	#facebook-mobile {
 		width: 40px;
 		height: 80px;
@@ -961,8 +967,8 @@ footer {
 		height: 80px;
 		margin-left: 40px;
 	}
-	#tripadvisor {
-		width: 90px !important;
+	#tripadvisor-mobile {
+		width: 115px !important;
 		height: 80px;
 	}
 	.social-icons__mobile-menu img{
