--- a/simple-page/styles.css
+++ b/simple-page/styles.css
@@ -53,7 +53,8 @@
 
       .simple-page-bgimg {
         width:100%;
-        height: 250px;
+
+        min-height: 250px;
         margin:20px 0;
       }
 
