--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ header {
 	height: 58px;
 	margin: 58px auto -120px;
 	position: relative;
-	width: 1128px;
+	width: 80%;
 	z-index: 5;
 }
 .header {
@@ -142,7 +142,7 @@ nav ul {
 	list-style-type: none;
 }
 nav ul li {
-	font-size: 18px;
+	font-size: 1.125rem;
 	margin-right: 17px;
 	text-transform: uppercase;
 }
@@ -188,7 +188,10 @@ nav a:active {
 	color: #4b82ac;
 }
 .language-dropdown {
-	position: relative;
+	position: absolute;
+	right:14px;
+	transform: translateY(-50%);
+	top: 50%;
 	display: inline-block;
 	margin-bottom: 35px;
 	margin-left: 12px;
@@ -260,13 +263,18 @@ nav a:active {
 	margin-left: 30px;
 }
 .contact-info a {
+	font-size: 1rem;
 	color: #83acc1;
 	margin-right: 15px;
 	text-decoration: none;
 }
 .contact-info {
 	color: #83acc1;
-	margin-bottom: 35px;
+	position: absolute;
+	
+    right: 60px;
+    transform: translateY(-50%);
+	top: 50%;
 }
 .contact-info a:hover {
 	text-decoration: underline;
@@ -400,7 +408,7 @@ nav a:active {
 	box-sizing: border-box;
 	height: 433px;
 	margin-bottom: 4px;
-	padding: 63px;
+	padding: 7vh;
 }
 
 .most-popular-tour hr {
@@ -850,6 +858,54 @@ footer {
 .close-icon {
 	display: none;
 }
+
+
+
+@media only screen and (max-width: 1366px) {
+	.contact-info a {
+		font-size: 14px;
+		
+	}
+	nav ul li {
+		font-size: 16px;
+	}
+
+	.most-popular-tour {
+		height: auto;
+		padding: 25px;
+	}
+
+	.most-popular-tour-section img {
+		height:370px !important;
+		width: 100%;
+	}
+
+	.sub-menu li {
+		font-size: 12px;
+
+	}
+	
+}
+@media only screen and (max-width: 1282px) {
+	.contact-info a {
+		font-size: 10px;
+		
+	}
+	nav ul li {
+		font-size: 12px;
+	}
+
+	nav {
+		margin-bottom: 20px;
+	}
+
+	.sub-menu li {
+		font-size: 10px;
+	}
+
+	
+}
+
 /*Responsive for smaller screens*/
 @media only screen and (max-width: 380px) {
   .slide-content {
