--- a/attraction/styles/styles.css
+++ b/attraction/styles/styles.css
@@ -80,6 +80,102 @@
 }
 
 
+/*Image lightbox*/
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+}
+
+.close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #999;
+    text-decoration: none;
+}
+
+.mySlides {
+    display: none;
+}
+
+.mySlides img {
+    height: 800px;
+    object-fit: cover;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.hover-shadow {
+    transition: 0.3s;
+}
+
+.hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.cursor {
+    cursor: pointer;
+}
+
+
+
 @media only screen and (max-width: 768px) {
     .attraction__content {
         padding: 2.5% 5%;
@@ -121,4 +217,19 @@
 .hero-section__content h2 {
     font-size: 40px;
 }
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 30% 10% 30% 0;
+    padding: 0;
+    width: 100%;
+    max-width: 1200px;
+}
+
+.mySlides img {
+    
+    height: 100%;
+    object-fit: cover;
+}
+
 }
