--- a/contact/styles.css
+++ b/contact/styles.css
@@ -28,6 +28,11 @@
   width: 60%;
 }
 
+.contact-icons__content a {
+  text-decoration: none;
+  color: #808080;
+}
+
 .contact-icons__content h3 {
   color: #0d2d3d;
   font-size: 25px;
@@ -43,12 +48,38 @@
 }
 
 .contact-icons__big img {
-  width: 47px;
-  height: 47px;
   margin-right: 15px;
   margin-top: 20px;
   cursor: pointer;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  filter: invert(49%) sepia(5%) saturate(4902%) hue-rotate(164deg) brightness(94%) contrast(85%);
 }
+
+
+.contact-icons__big img:hover {
+  filter:none;
+  background-color: #4b82ac;
+}
+
+#facebook-icon-contact {
+  width: 11px;
+  height: 22px;
+  padding: 10px 15px;
+}
+
+#instagram-icon-contact {
+  width: 22px;
+  height: 22px;
+  padding: 10px;
+}
+
+#tripadvisor-icon-contact {
+  width: 27px;
+  height: 17px;
+  padding: 12.5px 8px;
+}
+
 
 .contact-image__left img {
   width: 419px;
