--- a/styles.css
+++ b/styles.css
@@ -456,7 +456,7 @@ nav a:active {
 	color: #0d2d3d;
 	font-size: 45px;
 	font-weight: 500;
-	margin: -15px 0;
+	margin: -5px 0;
 }
 .wlarge-title-heading {
 	color: #fff;
@@ -487,6 +487,7 @@ nav a:active {
 	color: #bcbcbc;
 	font-size: 18px;
 	line-height: 25px;
+	margin-bottom: 25px;
 }
 .dark-paragraph {
 	color: #979797;
